# Autobase1.0

./: Multi_drone_battery_constraint.ipynb  carla_config.py  carla_main.py  readme.md  rosbridge.py
Communication/: CMakeLists.txt  package.xml
Communication/Messages/: Control.msg  State.msg
Communication/msg/: CarControls.msg  CarState.msg
Communication/src/: Stanley.py  carla_main.py  stanley_controller.py  testscript.py  tf_test.py  tf_test_2.py
Controls/: Stanley.py
Docs/: Carla.md
LocalPlanner/: testscript.py
car_utils/: CMakeLists.txt  package.xml  setup.py
car_utils/launch/: start_carla.launch
car_utils/rviz/: autobase1.3.rviz
carla_autobase/: CMakeLists.txt  package.xml  setup.py
carla_autobase/launch/: carla_autobase.launch
carla_autobase/src/: carla_main.py  rosbridge.py
ll_controller/: CMakeLists.txt  package.xml  setup.py
ll_controller/launch/: ll_controller.launch
ll_controller/scripts/: pid_tester.py
ll_controller/src/: run_ll_controller.py
ll_controller/src/ll_controller/: customPID.py  simplePID.py
stanley_controller/: CMakeLists.txt  package.xml  setup.py
stanley_controller/launch/: stanley.launch
stanley_controller/src/scripts/: cubic_spline_planner.py  stanley_controller.py
